# jupiter-swap-api-client

./: Cargo.toml
.kiro/: language.md  rust-clean-code.md
example/src/: main.rs
jupiter-swap-api-client/src/: lib.rs  order.rs  quote.rs  route_plan_with_metadata.rs  swap.rs
src/: build_transaction.rs  execute_transaction.rs  instruction.rs  lib.rs  order.rs
