[package]
name = "jupiter-swap-api-client"
version = "0.1.0"
description = "Jupiter Swap API rust client"
edition = "2021"

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
solana-sdk = "4.0.1"
solana-account-decoder = "3.1.10"
thiserror = "2"
serde_qs = "0.13.0"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.36.0"
